# nzb-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
src/: errors.rs  file.rs  files.rs  lib.rs  meta.rs  nzb.rs  parity.rs  parser.rs  segment.rs  subject.rs  subparsers.rs  xml.rs
tests/: test_errors.rs  test_parser.rs  test_serde_feature.rs
tests/common/: mod.rs
