[package]
name = "nzb-rs"
version = "0.6.0"
description = "A spec compliant parser for NZB files"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.93"
keywords = ["nzb", "usenet", "parser"]
categories = ["parser-implementations", "parsing"]
repository = "https://github.com/Ravencentric/nzb-rs"
documentation = "https://docs.rs/nzb-rs"

[dependencies]
chrono = "0.4.43"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
itertools = "0.14.0"
regex = "1.12.3"
roxmltree = "0.21.1"
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "2.0.18"

[features]
serde = ["dep:serde", "chrono/serde"]

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
rand = "0.10.0"
rstest = "0.26.1"
serde_json = "1.0.149"
